deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: default
  name: kaixin-gateway
  labels:
    app: kaixin-gateway
spec:
  selector:
    matchLabels:
      app: kaixin-gateway
  template:
    metadata:
      labels:
        app: kaixin-gateway
    spec:
      serviceAccountName: kaixin-gateway-sa
      containers:
        - name: kaixin-gateway
          imagePullPolicy: Always
          image: k3d-kaixin-registry:12345/gateway:v1.0
          ports:
            - containerPort: 8085
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
